# AI_AGENT15_STATUS_SERVICE

./: .env.example  CHAT_API.md  CHAT_TESTING_GUIDE.md  Dockerfile  Jenkinsfile  NOTIFICATION_SERVICE_ARCHITECTURE.md  README.md  chat-service.postman_collection.json  hello.py  logging.yaml  notification-service.postman_collection.json  postman_collection.json  pyproject.toml  start.sh
app/: ai_chat_main.py  chat_main.py  main.py
app/ai_chat_layer/: __init__.py  access_middleware.py  agent.py  audit.py  llm.py  mcp_client.py  models.py  quota.py  s3_helper.py  scheduler.py  schemas.py  session.py  system_bot.py
app/ai_chat_layer/api/: ai_router.py  anomaly_api.py  approvals_api.py  audit_api.py  dm.py  messages_api.py  quota_api.py  schedules_api.py
app/ai_chat_layer/mcp_server/: __init__.py  elicitation.py  result_cache.py  schema.py  schema_meta.py  semantic.py
app/ai_chat_layer/prompts/: system.py
app/api/: notification_api.py  status_api.py
app/chat_layer/: _synthetic_user.py  auth.py  chat_acl.py  entity_resolver.py  formatting.py  mentions.py  models.py  notification_bridge.py  presence.py  push_service.py  redis_chat.py  s3_chat_service.py  schemas.py  status_bot.py  store.py  user_info_cache.py  ws_manager.py
app/core/: config_dev.py  config_prod.py  consul_registration.py  logging.py
app/database_Layer/: db_config.py  db_model.py  db_schema.py  db_store.py
app/notification_layer/: celery_app.py  celery_tasks.py  event_handler.py  models.py  redis_manager.py  scheduler.py  schemas.py  store.py  ws_manager.py
chat_test_ui/: README.md  index.html  serve.py
k8s/: deployment.yaml
migrations/: TEAM_SETUP_RUNBOOK.md  create_notification_tables.sql  v10_chat_presence.sql  v11_chat_indexes.sql  v12_chat_general_seed.sql  v13_chat_notification_events.sql  v14_chat_reactions.sql  v15_chat_forward_sender.sql  v16_chat_push_subscriptions.sql  v17_chat_message_references.sql  v18_ai_chatbot.sql  v19_ai_artifact.sql  v20_chat_polls_tasks.sql  v21_chat_tasks_message_nonunique.sql  v21_position_closure_motivation.sql  v22_remarks_log_only.sql  v2_delivery_modes_and_banners.sql  v3_upgrade_job_candidate_events.sql  v4_refine_banner_templates.sql  v5_performance_indexes.sql  v6_remove_candidate_name_from_closure_templates.sql  v7_team_events.sql  v8_chat_core_tables.sql  v9_chat_message_metadata.sql
notification_ui/: requirements.txt  server.py
notification_ui/static/: index.html
tests/chat/: conftest.py
(+38 files in other folders)
