[project]
name = "ai-agent15-status-service"
version = "2.0.0"
description = "Status Service + Notification Service for HRMIS Recruitment Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "mysql-connector-python>=9.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=5.0.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "python-consul>=1.1.0",
    "httpx>=0.27.0",
]
